@@ -27,7 +27,7 @@
 // THE SOFTWARE.
 
 using System;
-using System.Collections;
+using System.Collections.Generic;
 
 using Mono.Cecil;
 using Mono.Cecil.Cil;
@@ -52,6 +52,13 @@ namespace Gendarme.Rules.Performance {
 			return HasAttribute (type.CustomAttributes, "System.Runtime.CompilerServices.CompilerGeneratedAttribute");
 		}
 
+
+		private bool ImplementsInternalsVisibleToAttribute (TypeDefinition type)
+		{
+			return HasAttribute (type.Module.Assembly.CustomAttributes,
+				"System.Runtime.CompilerServices.InternalsVisibleToAttribute");
+		}
+
 		private bool CheckSpecialTypes (TypeDefinition type)
 		{
 			// <Module> isn't tagged as generated by the compiler but still must be ignored
@@ -60,15 +67,63 @@ namespace Gendarme.Rules.Performance {
 
 			// some stuff, like arrays, is nested under <PrivateImplementationDetails>
 			if (type.IsNested)
-				return IsGeneratedByCompiler (type.DeclaringType);
+				return IsGeneratedByCompiler (type) || IsGeneratedByCompiler (type.DeclaringType);
 
 			return IsGeneratedByCompiler (type);
+		}
+
+		// we use this to cache the information about the assembly
+		// i.e. all types instantiated by the assembly
+		private Dictionary<AssemblyDefinition,List<TypeReference>> cache;
+
+		public void CacheInstantiationFromAssembly (AssemblyDefinition assembly)
+		{
+			if (cache == null)
+				cache = new Dictionary<AssemblyDefinition,List<TypeReference>> ();
+			else if (cache.ContainsKey (assembly))
+				return;
+
+			List<TypeReference> list = new List<TypeReference> ();
+
+			foreach (ModuleDefinition module in assembly.Modules) {
+				foreach (TypeDefinition type in module.Types) {
+					foreach (MethodDefinition method in type.Constructors) {
+						ProcessMethod (method, list);
+					}
+					foreach (MethodDefinition method in type.Methods) {
+						ProcessMethod (method, list);
+					}
+				}
+			}
+
+			cache.Add (assembly, list);
+		}
+
+		private void ProcessMethod (MethodDefinition method, List<TypeReference> list)
+		{
+			if (!method.HasBody)
+				return;
+
+			foreach (Instruction ins in method.Body.Instructions) {
+				if (ins.OpCode == OpCodes.Newobj) {
+					TypeReference t = ins.Operand as TypeReference;
+					if (t == null) {
+						MethodReference m = ins.Operand as MethodReference;
+						if (m != null)
+							t = m.DeclaringType;
+					}
+
+					if ((t != null) &&  !list.Contains (t))
+						list.Add (t);
+				}
+			}
 		}
 
 		public MessageCollection CheckType (TypeDefinition type, Runner runner)
 		{
 			// rule apply to non-public types
-			if (type.IsPublic)
+			// note: isAbstract also excludes static types (2.0)
+			if (type.IsPublic || type.IsAbstract)
 				return runner.RuleSuccess;
 
 			// some types are created by compilers and should be ignored
@@ -79,7 +134,16 @@ namespace Gendarme.Rules.Performance {
 			if (ImplementsInternalsVisibleToAttribute (type))
 				return runner.RuleSuccess;
 
-			if (IsInstantiable (type) && !IsInstantiated (type, type)) {
+			// create a cache of all type instantiation inside this 
+			AssemblyDefinition assembly = type.Module.Assembly;
+			CacheInstantiationFromAssembly (assembly);
+
+			List<TypeReference> list = null;
+			if (cache.ContainsKey (assembly))
+				list = cache [assembly];
+
+			// if we can't find the non-public type being used in the assembly then the rule fails
+			if (list == null || !list.Contains (type)) {
 				Location location = new Location (type.FullName, null);
 				Message message = new Message ("There is no call for any of the types constructor found", location, MessageType.Error);
 				return new MessageCollection (message);
@@ -87,60 +151,6 @@ namespace Gendarme.Rules.Performance {
 
 			return runner.RuleSuccess;
 		}
-
-		private bool ImplementsInternalsVisibleToAttribute (TypeDefinition type)
-		{
-			return HasAttribute (type.Module.Assembly.CustomAttributes,
-				"System.Runtime.CompilerServices.InternalsVisibleToAttribute");
-		}
-
-		private bool IsInstantiable (TypeDefinition type)
-		{
-			// note: that also excludes static types (2.0)
-			return !type.IsAbstract;
-		}
-
-		private bool IsInstantiated (TypeDefinition type, TypeDefinition nestedType)
-		{
-			bool instantiated = false;
-
-			foreach (MethodDefinition method in nestedType.Methods)
-				foreach (Instruction ins in method.Body.Instructions)
-					if (ins.OpCode == OpCodes.Newobj) {
-						string [] typeName = ins.Operand.ToString ().Split (':');
-						if (("System.Void "+ type.FullName) == typeName [0])
-							if (MethodIsCalled (nestedType, method))
-								instantiated = true;
-					}
-
-			if (nestedType.NestedTypes.Count > 0)
-				foreach (TypeDefinition nested in type.NestedTypes)
-					instantiated = IsInstantiated (type, nested);
-			return instantiated;
-		}
-
-		private bool MethodIsCalled (TypeDefinition type, MethodDefinition callingMethod)
-		{
-			string strCallingMethod = String.Empty;
-
-//FIXME: use a IsMain kind of method
-			if (callingMethod.Name == "Main" && callingMethod.IsStatic && callingMethod.ReturnType.ReturnType.FullName == "System.Void" && callingMethod.Parameters.Count == 1 && callingMethod.Parameters [0].ParameterType.FullName == "System.String[]")
-				return true;
-			else
-			{
-				strCallingMethod = callingMethod.ReturnType.ReturnType.FullName + " " + callingMethod.DeclaringType + "::" + callingMethod.Name + "(";
-				foreach (ParameterDefinition parameter in callingMethod.Parameters)
-					strCallingMethod += parameter.ParameterType.FullName + ",";
-
-				strCallingMethod = strCallingMethod.Remove (strCallingMethod.Length-1, 1) + ")";
-
-				foreach (MethodDefinition method in type.Methods)
-					foreach (Instruction ins in method.Body.Instructions)
-						if (ins.OpCode == OpCodes.Call || ins.OpCode == OpCodes.Calli || ins.OpCode == OpCodes.Callvirt)
-							if (strCallingMethod == ins.Operand.ToString ())
-								return true;
-			}
-			return false;
-		}
 	}
 }
+
